# Amadeus2.0

./: .gitignore  README.md  pyproject.toml
.github/workflows/: build-apk.yml
agent_runner/: __init__.py  __main__.py  agent_tools.py  android_adapter.py  cli.py  config.py  event_queue.py  gui.py  job_manager.py  models.py  notifications.py  orchestrator.py  run_payload.py  safety.py  session_controller.py  skill_manager.py  task_manager.py  tui.py  utils.py  vision_agent.py
agent_runner.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
agent_runner/gui_assets/: app.js  index.html  styles.css
codex-skills/phone-cli-controller/: SKILL.md
codex-skills/phone-cli-controller/agents/: openai.yaml
codex-skills/phone-cli-controller/references/: cli-commands.md
native-android/: README.md  settings.gradle.kts
native-android/app/: build.gradle.kts  proguard-rules.pro
scripts/: facebook_monitor.py  facebook_supervisor.py  moneytime_grind.py
skills/apps/amazon/: SKILL.md  memory.md  screens.json  selectors.json  state.json
skills/apps/ballsortpuzzle/: SKILL.md  (+4 more)
skills/facebook/: SKILL.md  memory.md  state.json
system/android_navigation/: SKILL.md
tests/: test_agent_tools.py  test_android_adapter.py  test_cli.py  test_event_queue.py  test_geometry.py  test_gui.py  test_job_manager.py  test_notifications.py  test_orchestrator.py  test_safety.py  test_session_controller.py  test_skill_manager.py  test_task_manager.py  test_tui.py  test_utils.py  test_vision_agent.py
tmp/: fb_after_listing.xml  fb_after_send.xml  fb_home_try.xml  fb_live.xml  fb_messages.xml
(+153 files in other folders)
