[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-runner"
version = "0.1.0"
description = "Vision-first Android automation framework for app-specific agent workflows."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "Appium-Python-Client>=4.0.0",
  "selenium>=4.24.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.setuptools.packages.find]
include = ["agent_runner*"]
